fix(section-hero): pixel alignment of section elements according to the layout

--- a/assets/sass/components/_section-categories.scss
+++ b/assets/sass/components/_section-categories.scss
@@ -163,7 +163,7 @@
                   right: 7px;
                 }
 
-                @media screen and (max-width: 1024px) {
+                @media screen and (max-width: 360px) {
                   right: 10px;
                 }
               }
